[package]
name = "tmuxwright-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Tmuxwright engine core: actions, waits, snapshots, traces, locator resolver, adapter capability negotiation."

[lints]
workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tmuxwright-term = { path = "../tmuxwright-term" }
