[package]
name = "tmuxwright-rpc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Tmuxwright adapter RPC: JSON-RPC 2.0 types, framing, stdio and Unix-domain-socket transports."

[lints]
workspace = true

[dependencies]
